:lipstick: design: search alignment fix

--- a/frontend/src/containers/SearchResult/SearchResult.scss
+++ b/frontend/src/containers/SearchResult/SearchResult.scss
@@ -16,7 +16,7 @@
   }
 
   .empty-column {
-    width: 2%;
+    width: 5%;
     display: flex;
     background-color: $paper-color;
   }
